<resources>
    <string name="app_name">TDAH Training</string>
    <string name="docente">Docente</string>
    <string name="rol">Rol</string>
    <string name="lst_alunos">Lista de alumnos</string>
    <string name="vista_docente">Vista Docente</string>
    <string name="foto_docente">Foto docente</string>
    <string name="lista_de_alumnos">Lista de alumnos</string>
    <string name="estudiante">Estudiante</string>
    <string name="nivel">Nivel</string>
    <string name="score">Score</string>
    <string name="curso">Curso</string>
    <string name="actualizar_nivel">Actualizar nivel</string>
    <string name="cancelar">Cancelar</string>
    <string name="configuracion">Configuración</string>
    <string name="login">Login</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_adm">Iniciar como admin</string>
    <string name="iniciar_doc">Iniciar como docente</string>
    <string name="iniciar_est">Iniciar como estudiante</string>
    <string name="registrar">Registrar usuario</string>
    <string name="ingrese_correo">Ingrese correo</string>
    <string name="ingrese_contrasena">Ingrese contraseña</string>

    <string-array name="lstNiveles">
        <item>nivel 1</item>
        <item>nivel 2</item>
    </string-array>

    <string-array name="lstSexo">
        <item>SELECCIONE SEXO</item>
        <item>MASCULINO</item>
        <item>FEMENINO</item>
        <item>OTRO</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="juegos_operaciones">Operaciones matemáticas</string>
    <string name="juegos_rompecabezas">Rompecabezas</string>
    <string name="regresar">Regresar</string>
    <string name="nuevo_nivel">Nuevo nivel</string>
    <string name="juegos_memoria">Memoria</string>
    <string name="juegos_triangulo">Triángulo mágico</string>
    <string name="categoria_memorizacion">Categoria MEMORIZACIÓN</string>
    <string name="categoria_matematicas">Categoria MATEMÁTICAS</string>
    <string name="cancel">Cancelar</string>
    <string name="si">Sí</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seleccione_la_respuesta_correcta">SELECCIONE LA RESPUESTA CORRECTA</string>
    <string name="comprobar">Comprobar</string>
    <string name="informacion">Información</string>
    <string name="salir">Salir</string>

</resources>