<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@drawable/ic_fondo_login4"
    tools:context=".vista.LoginActivity">

    <TextView
        android:id="@+id/txt_puntaje_mem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/img_doc"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:adjustViewBounds="true"
        android:background="@drawable/log" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:autofillHints=""
        android:background="#80D8FF"
        android:ems="10"
        android:hint="@string/ingrese_correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:background="#80D8FF"
        android:ems="10"
        android:hint="@string/ingrese_contrasena"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btLogin_est"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:background="@drawable/color_azul"
        android:text="@string/iniciar_est"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btLogin_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:background="@drawable/color_verde"
        android:text="@string/iniciar_doc"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btLogin_adm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_bordes"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_bordes"
        android:background="@drawable/color_rojo"
        android:text="@string/iniciar_adm"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>