<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#66CCFF"
    tools:context=".vista.DocenteActivity">

    <TextView
        android:id="@+id/textEtiEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="#00B0FF"
        android:text="@string/estudiante"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/img_est"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textApellidosEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_est"
        app:layout_constraintTop_toBottomOf="@+id/textNombresEst" />

    <TextView
        android:id="@+id/textNombresEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_est"
        app:layout_constraintTop_toBottomOf="@+id/textEtiEst" />

    <ImageView
        android:id="@+id/img_est"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_otros"
        android:contentDescription="@string/foto_docente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEtiNivel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#00B0FF"
        android:text="@string/nivel"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_est" />

    <TextView
        android:id="@+id/textEtiScore"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#00B0FF"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textEtiNivel"
        app:layout_constraintTop_toBottomOf="@+id/img_est" />

    <TextView
        android:id="@+id/textEtiCurso"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#00B0FF"
        android:text="@string/curso"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textEtiScore"
        app:layout_constraintTop_toBottomOf="@+id/img_est" />

    <TextView
        android:id="@+id/textNivel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEtiNivel" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toEndOf="@+id/textNivel"
        app:layout_constraintTop_toBottomOf="@+id/textEtiScore" />

    <TextView
        android:id="@+id/textCurso"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toEndOf="@+id/textScore"
        app:layout_constraintTop_toBottomOf="@+id/textEtiCurso" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScore">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/color_azul"
            android:text="@string/categoria_memorizacion"
            android:textAlignment="center"
            android:textColor="#FBFAFA"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_juego_rompecabeza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/boton_rosa"
            android:text="@string/juegos_rompecabezas"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_juego_memoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/color_verde_claro"
            android:text="@string/juegos_memoria"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/color_azul"
            android:text="@string/categoria_matematicas"
            android:textAlignment="center"
            android:textColor="#FBFAFA"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_juego_operaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/color_celeste"
            android:text="@string/juegos_operaciones"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_juego_triangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_naranja"
            android:text="@string/juegos_triangulo"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>