<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9E80"
    tools:context=".vista.DocenteActivity">

    <TextView
        android:id="@+id/txtEtiNuevoNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/nuevo_nivel"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNivel" />

    <TextView
        android:id="@+id/textEtiLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/docente"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/img_doc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNombresDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/img_doc"
        app:layout_constraintTop_toBottomOf="@+id/textEtiLogin" />

    <TextView
        android:id="@+id/textApellidosDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/img_doc"
        app:layout_constraintTop_toBottomOf="@+id/textNombresDoc" />

    <ImageView
        android:id="@+id/img_doc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_otros"
        android:contentDescription="@string/foto_docente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEtiListaAlum"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:text="@string/lista_de_alumnos"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_doc" />

    <Spinner
        android:id="@+id/spin_estudiantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEtiListaAlum" />

    <TextView
        android:id="@+id/textEtiEst"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/estudiante"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/img_doc_est"
        app:layout_constraintTop_toBottomOf="@+id/spin_estudiantes" />

    <TextView
        android:id="@+id/textNombresEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/img_doc_est"
        app:layout_constraintTop_toBottomOf="@+id/textEtiEst" />

    <TextView
        android:id="@+id/textApellidosEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/img_doc_est"
        app:layout_constraintTop_toBottomOf="@+id/textNombresEst" />

    <ImageView
        android:id="@+id/img_doc_est"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_otros"
        android:contentDescription="@string/foto_docente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_estudiantes" />

    <TextView
        android:id="@+id/textEtiNivel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/nivel"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_doc_est" />

    <TextView
        android:id="@+id/textEtiScore"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textEtiNivel"
        app:layout_constraintTop_toBottomOf="@+id/img_doc_est" />

    <TextView
        android:id="@+id/textEtiCurso"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/curso"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/tam_texto_descripcion"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textEtiScore"
        app:layout_constraintTop_toBottomOf="@+id/img_doc_est" />


    <TextView
        android:id="@+id/textNivel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEtiNivel" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toEndOf="@+id/textNivel"
        app:layout_constraintTop_toBottomOf="@+id/textEtiScore" />

    <TextView
        android:id="@+id/textCurso"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffff99"
        android:textColor="#000000"
        android:textSize="@dimen/tam_texto_descripcion"
        app:layout_constraintStart_toEndOf="@+id/textScore"
        app:layout_constraintTop_toBottomOf="@+id/textEtiCurso" />


    <Spinner
        android:id="@+id/spin_nuevo_nivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/lstNiveles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEtiNuevoNivel" />

    <Button
        android:id="@+id/bt_actualizar_nivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/color_azul"
        android:text="@string/actualizar_nivel"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_nuevo_nivel" />

</androidx.constraintlayout.widget.ConstraintLayout>